# rsync-nohup

./: README.md  pyproject.toml  rsync_nohup.py
src/rsync_nohup/: __main__.py
src/rsync_nohup/launcher/: launcher.py
src/rsync_nohup/process/: __init__.py  manager.py  process.py
src/rsync_nohup/utils/: access.py  exit_codes.py  helper.py
